Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-59189

Immutable texture storage does not work on OpenGL ES 2.0 with GL_EXT_texture_storage

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: P3: Somewhat important P3: Somewhat important
    • None
    • 5.8.0
    • GUI: OpenGL
    • None
    • Windows 10/ANGLE driver

      QOpenGLTexture::hasFeature(QOpenGLTexture::ImmutableStorage) returns false on ANGLE OpenGL implementation even though it has the GL_EXT_texture_storage extension.

      The problem seems to be this test on line 3476 of Src/qtbase/src/gui/opengl/qopengltexture.cpp

      case ImmutableStorage:
      supported = (f.version() >= qMakePair(3, 0) || ctx->hasExtension(QByteArrayLiteral("EXT_texture_storage")))
      && !(renderer && strstr(renderer, "Mali")); // do not use on Mali: QTBUG-45106
      break;

      The test should be for "GL_EXT_texture_storage", not "EXT_texture_storage".

        For Gerrit Dashboard: QTBUG-59189
        # Subject Branch Project Status CR V

            lagocs Laszlo Agocs
            tseval Thomas Sevaldrud
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes